# three-finger-dragging

./: .gitignore  COMPATIBILITY  COPYING  ChangeLog  FEATURES  FILES  INSTALL  INSTALL.DE  INSTALL.FR  Makefile  Makefile.am  Makefile.in  NEWS  PARAMETER  README  README.alps  TODO  aclocal.m4  alps.patch  alpscomm.c  alpscomm.h  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  eventcomm.c  eventcomm.h  freebsd_mouse.h  libtool  linux_input.h  pc_keyb.c.diff.2.4.3  ps2comm.c  ps2comm.h  psmcomm.c  psmcomm.h  synaptics.c  synaptics.h  synaptics.spec  (+6 more)
Xincludes/: README.xincludes
Xincludes/usr/X11R6/include/X11/: Xfuncproto.h
Xincludes/usr/X11R6/lib/Server/include/: Xmd.h  colormap.h  dixstruct.h  gc.h  inputstr.h  opaque.h  property.h  regionstr.h  resource.h  screenint.h  scrnintstr.h  xf86.h  xf86Module.h  xf86Version.h  xf86Xinput.h  xf86_OSproc.h  xf86_ansic.h  xf86_libc.h
Xincludes/xc/exports/include/X11/: X.h  Xalloca.h  Xfuncproto.h  Xfuncs.h  Xosdefs.h
Xincludes/xc/programs/Xserver/hw/xfree86/common/: xf86Opt.h  xf86str.h
Xincludes/xc/programs/Xserver/include/: XIstubs.h  bstorestr.h  dix.h  exevents.h  input.h  misc.h  miscstruct.h  os.h
conf/: 11-x11-synaptics.fdi  50-synaptics.conf  71-synaptics.rules  Makefile  Makefile.am  Makefile.in
docs/: COMPATIBILITY  INSTALL.DE  tapndrag.dia  trouble-shooting.txt
fdi/: 11-x11-synaptics.fdi  Makefile.am
include/: Makefile  Makefile.am  Makefile.in  synaptics-properties.h  synaptics.h
man/: Makefile  Makefile.am  Makefile.in  synaptics.4  synaptics.5  synaptics.man  synclient.1  synclient.man  syndaemon.1  syndaemon.man
manpages/: synaptics.5  synclient.1  syndaemon.1
script/: usbhid  usbmouse
src/: .synaptics.c.swp  Makefile  Makefile.am  Makefile.in  alpscomm.c  alpscomm.lo  eventcomm.c  eventcomm.h  eventcomm.lo  freebsd_mouse.h  properties.c  properties.lo  ps2comm.c  ps2comm.h  ps2comm.lo  psmcomm.c  psmcomm.h  synaptics.c  synaptics.h  synaptics.lo  synaptics_drv.la  synapticsstr.h  synclient.c  syndaemon.c  synproto.c  synproto.h  synproto.lo
src/.deps/: alpscomm.Plo  eventcomm.Plo  properties.Plo  ps2comm.Plo  synaptics.Plo  synproto.Plo
src/.libs/: synaptics_drv.la  synaptics_drv.lai
test/: .gitignore  Makefile  Makefile.am  Makefile.in  eventcomm-test  eventcomm-test.c  fake-symbols.c  fake-symbols.h  test-pad.c  testprotocol.c
test/.deps/: eventcomm-test.Po  eventcomm.Po  fake-symbols.Po  synproto.Po
tools/: .gitignore  Makefile  Makefile.am  Makefile.in  synclient  synclient.c  syndaemon  syndaemon.c
tools/.deps/: synclient.Po  syndaemon-syndaemon.Po
